initial release made

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 *.pyc
 *.egg-info
+bin/
+elementtree-1.2.7_20070827_preview-py2.6.egg/
+elementtreewriter-1.1-py2.6.egg/
+dist/
+imsvdex-1.0-py2.6.egg/
+include/
+lib/
+manuel-1.2.0-py2.6.egg/
+zope.component-3.9.4-py2.6.egg/
+zope.configuration-3.7.2-py2.6.egg/
+zope.event-3.5.0_1-py2.6.egg/
+zope.exceptions-3.6.0-py2.6.egg/
+zope.i18nmessageid-3.5.2-py2.6-macosx-10.6-x86_64.egg/
+zope.interface-3.6.1-py2.6-macosx-10.6-x86_64.egg/
+zope.schema-3.6.4-py2.6.egg/
+zope.testrunner-4.0.0b3-py2.6.egg/
